<resources>
    <string name="app_name">BudgetFy</string>
    <string name="increase">Increase</string>
    <string name="loss">Loss</string>
    <string name="apply">Apply</string>
    <string name="add_transaction">Add transaction</string>
    <string name="transport">Transport</string>
    <string name="food">Food</string>
    <string name="education">Education</string>
    <string name="rent">Rent</string>
    <string name="add_account">Add account</string>
    <string name="wallet">wallet</string>
    <string name="credit_card">credit card</string>
    <string name="start_value">Start value</string>
    <string name="rub">руб.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_account">Delete account</string>
    <string name="edit_account">Edit account</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="account_removing_title">Account removing</string>
    <string name="account_removing_text">all transactions also will be deleted</string>
    <string name="rename_account_name">Rename account name</string>
    <string name="rename_account_name_text">type new account name</string>
    <string name="comment">comment</string>
    <string name="cafe">Cafe</string>
    <string name="other">Other</string>
    <string name="stipend">Stipend</string>
    <string name="barber">Barber</string>
    <string name="loss_value">loss value</string>
    <string name="gift">Gift</string>
    <string name="account_renaming_title">Account refactoring</string>
    <string name="salary">Salary</string>
    <string name="OK">OK</string>
    <string name="phone">Phone</string>
    <string name="increase_value">Increase value</string>
    <string name="name">Name</string>
    <string name="add_new_account_question">Add new account?</string>
    <string name="delete">delete</string>
    <string-array name="currencies">
        <item>BYR</item>
        <item>USD</item>
    </string-array>
</resources>