<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lossContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/add_transaction"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroupLoss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/transportRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transport"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/phoneRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/foodRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/educationRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/education"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/rentRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rent"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/cafeRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cafe"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/barberRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/barber"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/otherRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:theme="@style/RadioButtonStyle" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/ic_down_90"
                android:contentDescription="@string/app_name"
                android:scaleType="fitEnd" />

            <EditText
                android:id="@+id/commentEditLoss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:gravity="end"
                android:hint="@string/comment"
                android:inputType="text"
                android:maxLength="@integer/comment_len_max"
                android:theme="@style/RadioButtonStyle" />

            <EditText
                android:id="@+id/valueEditLoss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/loss_value"
                android:inputType="date"
                android:maxLength="@integer/value_len_max"
                android:theme="@style/RadioButtonStyle" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelLossButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/applyLossButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/apply"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>