<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/increaseContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/add_transaction"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroupIncrease"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:gravity="bottom">

            <RadioButton
                android:id="@+id/stipendRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stipend"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/salaryRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salary"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/giftsRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gift"
                android:theme="@style/RadioButtonStyle" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_up_90" />

            <EditText
                android:id="@+id/commentEditIncrease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:gravity="end"
                android:hint="@string/comment"
                android:inputType="text"
                android:maxLength="@integer/comment_len_max"
                android:theme="@style/RadioButtonStyle" />

            <EditText
                android:id="@+id/valueEditIncrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/increase_value"
                android:inputType="date"
                android:maxLength="@integer/value_len_max"
                android:theme="@style/RadioButtonStyle" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelIncreaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/applyIncreaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/apply"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>