<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addAccountContainer"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleAddAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_account_question"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:background="@color/gray_DF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nameAddAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLength="@integer/account_len_max"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/startValueAddAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/start_value"
            android:inputType="date"
            android:maxLength="@integer/value_len_max"
            android:textSize="16sp" />


        <RadioGroup
            android:id="@+id/radioGroupAddAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/creditCardRadioAddAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_card"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/walletRadioAddAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet"
                android:textSize="14sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/noAddAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/yesAddAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/save"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>