<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end">

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="30sp"
            tools:text="Transport" />

        <ImageView
            android:id="@+id/imageViewRefactorTransaction"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <EditText
        android:id="@+id/commentRefactorTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/comment"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        tools:text="tram" />

    <EditText
        android:id="@+id/dateRefactorTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="date"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        tools:text="20.10.2020" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/okButtonRefactorTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/OK" />

        <Button
            android:id="@+id/cancelButtonRefactorTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>