<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transactionDetailsContainer"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end">

        <TextView
            android:id="@+id/categoryEditTransaction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="30sp"
            tools:text="Transport" />

        <ImageView
            android:id="@+id/imageViewEditTransaction"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <EditText
        android:id="@+id/sumEditTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="date"
        android:maxLength="@integer/value_len_max"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        tools:text="value" />

    <EditText
        android:id="@+id/commentEditTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/comment"
        android:inputType="text"
        android:maxLength="@integer/comment_len_max"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        tools:text="bus" />

    <EditText
        android:id="@+id/dateEditTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="date"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        tools:text="20.10.2020" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/noEditTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <Button
            android:id="@+id/yesEditTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:background="@android:color/transparent"
            android:text="@string/OK"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>