<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountCreator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/enterNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/account_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/accountNameEditText"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="-5dp"
            tools:layout_editor_absoluteY="239dp">

            <TextView
                android:id="@+id/enterStartValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_value"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/startValueEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rub"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/cancelButton"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onCancelClick"
                android:text="@string/cancel"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/saveButton"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onSaveClick"
                android:text="@string/save"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>